--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "liuzeyang"
+  "author": "jasonlzy",
+  "publishConfig": {
+    "access": "public"
+  }
 }
